Finalização do README

--- a/lista_encadeada/README
+++ b/lista_encadeada/README
@@ -1,11 +1,30 @@
+Listas encadeadas
+=================
+
+## Considerações
+
 O arquivo les_v1.cpp contém a implementação dos métodos solicitados.
+
 Não foi possível a implementação do método bool popBack( SNPtr & _pAIL, int& _retrievedVal ).
+
 Já o arquivo drive_les_v1.cpp possuí funções que irão testar os métodos criados no les_v1.cpp.
-Para auxiliar na compilação foi criado um arquivo Makefile, ou seja, necessitando apenas do
-comando make para que a compilação aconteça e ./drove_les_v1 para executar.
+
+## Compilando
+
+Execute o comando 'make' para compilar o código-fonte do projeto em um arquivo executável chamado 'drove_les_v1'.
+
+```sh
+$ make
+```
+## Como usar
+
+```sh
+$ ./drove_les_v1
+```
+
+## Conclusões
+
 Quanto ao const ser utilizado em algumas funções e outras não deve-se ao fato dele indicar e
 impedir a função de alterar o conteúdo da variável. Nas funções que possuem o const no ponteiro
 só lemos a informação da variável, não podemos altera-la. Quando existe a necessidade de alterar
 algo como é o caso de insert e remove, não temos o const, portanto podemos alterar a variável list.
-
-Esse projeto está disponível em: http://goo.gl/ATs3nO
